2009-08-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: gluon's request attributes are stored to Rack
	request hash.

	* lib/gluon/web/error.rb: error message board component.

	* lib/gluon/controller.rb: explicit page encoding.

	* lib/gluon/action.rb, lib/gluon/errmap.rb, lib/gluon/fstore.rb,
	lib/gluon/mock.rb, lib/gluon/plugin.rb, lib/gluon/renderer.rb,
	lib/gluon/urlmap.rb: obsolete files for restructured gluon for
	ruby19.

2009-08-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/backend.rb: backend service for application.

2009-08-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb: form control name
	notation changed. the reason to change is to avoid confliction to
	notation of Rack request parameters for `Ruby on Rails'.

2009-08-12  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb: obsolete gluon-radio.
	gluon radio-group and radio-button should be used.

2009-08-11  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/rs.rb: path_args attribute
	for request-response context.

	* lib/gluon/controller.rb: skip uninitialized child components for
	form-parameters and apply-first-action.

2009-08-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb: gluon-radio-group and
	gluon-radio-button.

	* lib/gluon/controller.rb: assumed that request parameters is Hash
	object, not Rack::Request object.

	* lib/gluon/controller.rb: inheritance of gluon path-filter.

	* lib/gluon/controller.rb: memoization for class method.

	* lib/gluon/controller.rb: syntax sugar of negative condition for
	gluon-cond.

	* lib/gluon/rs.rb: reference to controller.

	* run/lib/Example.rb: new example.

2009-08-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* bin/gluon_local: utility for project local RubyGems environemnt.

	* lib/gluon/controller.rb: easy memoization.

2009-08-07  TOKI Yoshinori  <toki@freedom.ne.jp>
