@@ -1,5 +1,8 @@
 2009-08-23  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/application.rb, lib/gluon/controller.rb:
+	apply-first-action is obsolete and replaced by find-first-action.
+
 	* lib/gluon/rs.rb: gluon's request attributes are stored to Rack
 	request hash.
 
